XML .DotSettings export

--- a/resharper-configurator/package.json
+++ b/resharper-configurator/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/jxon": "^2.0.0",
+    "@types/xml-formatter": "^2.1.1",
     "core-js": "^3.6.5",
+    "jxon": "^2.0.0-beta.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.2"
+    "vue-property-decorator": "^8.4.2",
+    "xml-formatter": "^2.4.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
